// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/UnifiedShareForm closeEmailSharedLinkForm() should set state properly 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm openEmailSharedLinkForm() should set state properly 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <EmailForm
      contactsFieldLabel={
        <FormattedMessage
          defaultMessage="Email Shared Link"
          id="boxui.unifiedShare.sendSharedLinkFieldLabel"
        />
      }
      inlineNotice={
        {
          "content": undefined,
          "type": "error",
        }
      }
      isContactsFieldEnabled={true}
      isExpanded={true}
      isExternalUserSelected={false}
      onPillCreate={[Function]}
      onRequestClose={[Function]}
      onSubmit={[Function]}
      selectedContacts={[]}
      showEnterEmailsCallout={false}
      updateSelectedContacts={[Function]}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should not render a default component FTUX when prop is false 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should not render a default component FTUX when state is false 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a component with autofocus set for shared link when focusSharedLinkOnLoad is enabled and there is a shared link 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={true}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={
        {
          "url": "https://foo.com",
        }
      }
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component FTUX based on enabled prop and state 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isShown={true}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component in initial loading state 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={true}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component when showing invite section expanded 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={true}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component when the user cannot invite collaborators due to item type of weblink 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="Collaborators cannot be added to bookmarks."
              id="boxui.unifiedShare.inviteDisabledWeblinkTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isContactsFieldEnabled={false}
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="web_link"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "web_link",
          "typedID": "f_111",
        }
      }
      itemType="web_link"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component when the user cannot invite collaborators due to permissions 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isContactsFieldEnabled={false}
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="folder"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "folder",
          "typedID": "f_111",
        }
      }
      itemType="folder"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with collaboration restriction warning specified and invite section is NOT expanded 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "Collaboration invitations can only be sent to people within company.",
              "type": "warning",
            }
          }
          isContactsFieldEnabled={true}
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={false}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with collaboration restriction warning specified and invite section is expanded 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "Collaboration invitations can only be sent to people within company.",
              "type": "warning",
            }
          }
          isContactsFieldEnabled={true}
          isExpanded={true}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={false}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with collaborator list if showCollaboratorList state is set 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <CollaboratorList
      collaborators={
        [
          {
            "hasCustomAvatar": false,
            "name": "test a",
          },
          {
            "hasCustomAvatar": false,
            "name": "test b",
          },
        ]
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemName="test file"
      itemType="file"
      maxCollaboratorListSize={90}
      onDoneClick={[Function]}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with confirm modal open 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with correct Focus element and props when focusSharedLinkOnLoad is enabled 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={true}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={
        {
          "url": "https://foo.com",
        }
      }
      showSharedLinkSettingsCallout={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with default props 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={true}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with invitee permissions listed 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": "",
              "type": "warning",
            }
          }
          isContactsFieldEnabled={true}
          isExpanded={false}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          submitting={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={false}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                "Editor",
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
    <SharedLinkSection
      autoCreateSharedLink={false}
      autofocusSharedLink={false}
      intl={
        {
          "formatMessage": [MockFunction],
        }
      }
      item={
        {
          "grantedPermissions": {
            "itemShare": true,
          },
          "hideCollaborators": false,
          "id": "111",
          "name": "test file",
          "type": "file",
          "typedID": "f_111",
        }
      }
      itemType="file"
      onDismissTooltip={[Function]}
      onEmailSharedLinkClick={[Function]}
      onToggleSharedLink={[Function]}
      sharedLink={{}}
      showSharedLinkSettingsCallout={false}
      submitting={false}
      tooltips={{}}
      trackingProps={{}}
      triggerCopyOnLoad={false}
    />
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render a default component with send invite error specified 1`] = `
<div
  className=""
>
  <LoadingIndicatorWrapper
    hideContent={true}
    isLoading={false}
  >
    <Tooltip
      className="usm-ftux-tooltip"
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      position="middle-left"
      showCloseButton={true}
      targetWrapperClassName="bdl-UnifiedShareForm-tooltipTarget"
      text={
        <div>
          <h4
            className="ftux-tooltip-title"
          >
            <FormattedMessage
              defaultMessage="Simplified sharing for files and folders"
              id="boxui.unifiedShare.ftuxNewUsmUserTitle"
            />
          </h4>
          <p
            className="ftux-tooltip-body"
          >
            <FormattedMessage
              defaultMessage="We’ve simplified the sharing experience when you click 'Share'. Invite people to this item here and toggle the link on or off below for easy sharing."
              id="boxui.unifiedShare.ftuxNewUSMUserBody"
            />
             
            <Link
              className="ftux-tooltip-link"
              href="https://community.box.com/t5/Using-Shared-Links/Creating-Shared-Links/ta-p/19523"
              target="_blank"
            >
              <FormattedMessage
                defaultMessage="Read more about shared link security here."
                id="boxui.unifiedShare.ftuxLinkText"
              />
            </Link>
          </p>
          <div
            className="ftux-tooltip-controls"
          >
            <Button
              className="ftux-tooltip-button"
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <FormattedMessage
                defaultMessage="Got it"
                id="boxui.unifiedShare.ftuxConfirmLabel"
              />
            </Button>
          </div>
        </div>
      }
      theme="callout"
    >
      <div
        className="invite-collaborator-container"
        data-testid="invite-collaborator-container"
      >
        <EmailForm
          contactsFieldAvatars={
            <CollaboratorAvatars
              collaborators={[]}
              containerAttributes={{}}
              maxAdditionalCollaboratorsNum={99}
              maxDisplayedUserAvatars={3}
              onClick={[Function]}
            />
          }
          contactsFieldDisabledTooltip={
            <FormattedMessage
              defaultMessage="You do not have permission to invite collaborators."
              id="boxui.unifiedShare.inviteDisabledTooltip"
            />
          }
          contactsFieldLabel={
            <FormattedMessage
              defaultMessage="Invite People"
              id="boxui.unifiedShare.inviteFieldLabel"
            />
          }
          inlineNotice={
            {
              "content": <span>
                Some Error
              </span>,
              "type": "error",
            }
          }
          isContactsFieldEnabled={true}
          isExpanded={true}
          isExternalUserSelected={false}
          isFetchingJustificationReasons={false}
          isRestrictionJustificationEnabled={false}
          justificationReasons={[]}
          onContactInput={[Function]}
          onPillCreate={[Function]}
          onRequestClose={[Function]}
          onSubmit={[Function]}
          openInviteCollaboratorsSection={[Function]}
          recommendedSharingTooltipCalloutName={null}
          restrictedEmails={[]}
          restrictedGroups={[]}
          selectedContacts={[]}
          showEnterEmailsCallout={false}
          updateSelectedContacts={[Function]}
        >
          <InviteePermissionsMenu
            changeInviteePermissionLevel={[Function]}
            disabled={false}
            inviteePermissionLevel=""
            inviteePermissions={
              [
                {
                  "text": "Editor",
                  "value": "Editor",
                },
              ]
            }
            inviteePermissionsButtonProps={{}}
            itemType="file"
          />
        </EmailForm>
      </div>
    </Tooltip>
  </LoadingIndicatorWrapper>
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm render() should render an allShareRestrictionWarning message when it is available 1`] = `
<div
  className="test-class"
>
  Sharing is prohibited
</div>
`;

exports[`features/unified-share-modal/UnifiedShareForm renderCollaboratorAvatars() should filter out current user 1`] = `
<CollaboratorAvatars
  collaborators={
    [
      {
        "userID": 5678,
      },
    ]
  }
  containerAttributes={{}}
  maxAdditionalCollaboratorsNum={99}
  maxDisplayedUserAvatars={3}
  onClick={[Function]}
/>
`;

exports[`features/unified-share-modal/UnifiedShareForm renderCollaboratorAvatars() should filter out current user 2`] = `
<CollaboratorAvatars
  collaborators={
    [
      {
        "userID": 5678,
      },
    ]
  }
  containerAttributes={{}}
  maxAdditionalCollaboratorsNum={99}
  maxDisplayedUserAvatars={3}
  onClick={[Function]}
/>
`;

exports[`features/unified-share-modal/UnifiedShareForm renderCollaboratorAvatars() should not render if hideCollaborators is true and canInvite is false 1`] = `false`;

exports[`features/unified-share-modal/UnifiedShareForm renderCollaboratorAvatars() should not render if hideCollaborators is true and canInvite is false 2`] = `false`;
